--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "express-session": "^1.17.1",
-    "mysql": "^2.18.1"
+    "instamojo-nodejs": "0.0.5",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.6",
+    "socket.io": "^3.0.4"
   }
 }
